--- a/Mechanik.tex
+++ b/Mechanik.tex
@@ -44,7 +44,7 @@
 		Wenn der Druckraum nach beziehungsweise während des Druckvorgangs warm ist, kühlt das Werkstück an jeder Stelle fast gleich ab.
 		Ist der Druckraum offen, kühlt das Werkstück außen schneller ab, kühles Material zieht sich zusammen, daher biegt sich das Material am Rand auf.
 
-		Manchmal ist es unumgeänglich, ein Teil so drucken zu lassen, dass es nicht komplett auf der Druckplatte aufliegt zum Beispiel ein Steg,
+		Manchmal ist es unumgänglich, ein Teil so drucken zu lassen, dass es nicht komplett auf der Druckplatte aufliegt zum Beispiel ein Steg,
 		der “in der Luft“ liegt oder eine Bohrung im Werkstück, die horizontal gedruckt werden muss.
 		In solchen Fällen, druckt der Drucker unter diesem Steg Stützmaterial. Basierend auf diesem Stützmaterial, wird dann die gewünschte Form gedruckt.
 		Das Stützmaterial ist so strukturiert, dass man es leicht entfernen kann, ohne Rückstände zu hinterlassen.
@@ -167,7 +167,7 @@
 	\subsection{Technische Planung}
 
 	In dem gewählten Bausatz des Multicopters ist kein Rotorschutz vorhanden.
-	Da der Hexacopter direkt zu den Gästen fliegen wird, ist es umbedingt erforlderlich, den Kontakt mit den Propellern zu verhindern.
+	Da der Hexacopter direkt zu den Gästen fliegen wird, ist es unbedingt erforderlich, den Kontakt mit den Propellern zu verhindern.
 	Diese können durch die hohen Drehzahlen und die Kraft der Motoren erhebliche Verletzungen verursachen.
 	Es gibt diverse Vorrichtungen für Multicopter zu kaufen, die nur die Rotorblätter schützen, jedoch keine, die auch das Eingreifen einer Hand verhindern.
 
@@ -282,7 +282,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 			\end{figure}
 
 	Das Gewicht spielte, analog zu den anderen Konstruktionen, eine wichtige Rolle.
-	Materialien wie Stahl oder Aluminium wären selbst bei diesen kleinen Teil (51x46x10 mm) zu schwer geworden.
+	Materialien wie Stahl oder Aluminium wären selbst bei diesem kleinen Teil (51x46x10 mm) zu schwer geworden.
 	Um das zu verhindern wurde diese Haltevorrichtung, wie auch der Propellerschutz, in einem 3D- Drucker angefertigt.
 	Das Teil wiegt durch die Fertigungsmethode etwa 5.5 g, das entspricht etwa dem Gewicht einer 20-Cent-Münze.
 
@@ -341,7 +341,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Diesen Versuch kann man analog dazu für die Biegung und Torsion machen, man erhält dadurch die maximale Bruch,- beziehungsweise Torsionsspannung.
 
 	Da sich die Werte der einzelnen Hersteller nur minimal voneinander unterscheiden,
-	wurden in diesem Fall die Daten aus einer Tabelle eines anderen Kunstoffherstellers genommen (siehe Abbildung \ref{werte_abs}).
+	wurden in diesem Fall die Daten aus einer Tabelle eines anderen Kunststoffherstellers genommen (siehe Abbildung \ref{werte_abs}).
 
 			\begin{figure}[H]
 			\begin{centering}
@@ -514,7 +514,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Der Hexacopter soll dem Gast sein gewünschtes Dessert bringen, der Weg zu dem Gast wird über Farbcodes am Boden vorgegeben.
 	Um dem Farbcode folgen zu können, wird eine PIXY CMU cam5 verwendet (genaueres siehe Kapitel Sensoren).
 
-	Die Halterung soll so konstruiert werden, dass die Kamera während des Fluges nicht wackelt, damit keine ungenaue beziehungsweise falsche Messwerte entstehen.
+	Die Halterung soll so konstruiert werden, dass die Kamera während des Fluges nicht wackelt, damit keine ungenauen beziehungsweise falschen Messwerte entstehen.
 	Zu beachten ist, dass die PIXY Cam immer in die Flugrichtung ausgerichtet sein muss.
 	Der Flightcontroller gibt dem Hexacopter eine fixe Orientierung vor, würde die Kamera nicht in diese Richtung messen, würde es zu Fehlmessung kommen und den Multicopter falsch navigieren.
 
@@ -554,7 +554,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 
 	Der Flightcontroller wurde so eingebaut, dass ein Arm des Hexacopters zur Kontrolle in die Flugrichtung steht.
 	Die \textcolor{red}{Halterung} wurde genau in der Mitte der Strebe platziert, daher konnte eine Konstruktionslinie vom Mittelpunkt der Platte aus, gesetzt werden.
-	Der Winkel konnte gemessen werden, indem die zweite Konstruktionslinie entlang der Mitte des Arm gesetzt wurde.
+	Der Winkel konnte gemessen werden, indem die zweite Konstruktionslinie entlang der Mitte des Arms gesetzt wurde.
 	Die Schräge ist deshalb notwendig, da der Platz auf der Platine des Sensors so begrenzt ist, dass nur die Fläche der unteren Leiste aufliegen kann.
 
 			\newpage
@@ -634,24 +634,24 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Dieses Problem haben wir nicht nur durch die Jour fixes, sondern auch mit den KaTeCos (alle drei Wochen) gelöst.
 	Die KaTeCos waren besonders wichtig, da nicht nur der Projektverlauf im Detail besprochen, sondern auch die Teamfähigkeit gestärkt wurde.
 
-	\subsection{Arbeiten im allgemeinen}
+	\subsection{Arbeiten im Allgemeinen}
 
 	Die Vorgangsweise zur Umsetzung eines Teiles war meist die gleiche: Eine Idee, eine Konstruktion in Creo und die Fertigung im 3D-Drucker.
 	Im Laufe des Projektes hat sich herausgestellt, dass die Planung und die Anhaltspunkte zur Konstruktion am wichtigsten waren.
 	Das hat sich beim Entwickeln des Rotorschutzes gezeigt, die Planung wurde vernachlässigt und in Creo blind angefangen zu zeichnen.
 	Die Folge war, dass dieses Ziel ins Stocken kam und immer mehr Zeit auf sich genommen hat.
 	Nachdem der Rotorschutz nahezu aussichtslos schien, begann ich mich mit den Halterungen für die Sensoren zu beschäftigen.
-	Nach dem Abschluss haben sich neue Ideen zur Optimierung des Propellerschutzes ergeben, welche dann auch zur entgültigen Fertigstellung führten.
+	Nach dem Abschluss haben sich neue Ideen zur Optimierung des Propellerschutzes ergeben, welche dann auch zur endgültigen Fertigstellung führten.
 
 	\subsection{Arbeiten mit dem 3D- Drucker}
 
 	Der 3D- Drucker der Schule ist eine faszinierende Maschine, es kann fast jedes Teil präzise angefertigt werden, egal welche Form es hat.
 	Wir hatten das Glück diesen Drucker verwenden zu dürfen beziehungsweise wurden sogar von EVO-tech mit Druckmaterial unterstützt.
-	Es war besonders komfortabel die Halerungen drucken zu dürfen, da uns der Drucker eine Menge abgenommen hat.
+	Es war besonders komfortabel die Halterungen drucken zu dürfen, da uns der Drucker eine Menge abgenommen hat.
 	Das Klammersystem könnte nur sehr mühsam gefertigt werden, es müsste sogar eine andere Lösung gefunden werden.
 
 	Man muss sich an jede Maschine die man verwendet erst gewöhnen, man lernt wie man sie bedienen muss, mit all ihren Problemen.
-	Der Evolizer ist ein hoch entwickeltes Produkt, jedoch muss man auch hier die richtige Bedienung kennenlernen.
+	Der EVOlizer ist ein hoch entwickeltes Produkt, jedoch muss man auch hier die richtige Bedienung kennenlernen.
 	Es hat sich zum Beispiel herausgestellt, dass der Drucker erst eine gewisse Temperatur braucht, bis das Filament auf der Platte haftet, oder dass der Abstand zwischen der Platte und Düse sehr genau eingestellt gehört.
 	Durch solche Probleme lernt man, wie man mit der Maschine umgehen muss und wie man sie optimal bedient, diese Erfahrung kann im weiteren Berufsleben sehr hilfreich sein.
 
