viiiiiiiele fehler böser projektleiter :b - defarfen sollt noch gecheckt werden

--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -6,7 +6,7 @@
 \section{Projektidee}
 Die Idee des Projektes ist die Entwicklung einer Konzeptstudie eines innovativen Logistiksystems, das sich durch die Verwendung eines Multicopters auszeichnet.
 Für den Entwicklungsprozess im Zuge der Diplomarbeit wurde die Gastronomie als Einsatzbereich gewählt. Diese Wahl ermöglicht zum einen
-ein konkreteres Fomulieren der Ziele und zum anderen eine einheitliche Vision innerhalb des Teams.
+ein konkreteres Formulieren der Ziele und zum anderen eine einheitliche Vision innerhalb des Teams.
 
 Der innovative Aspekt des Projekts wird insofern abgedeckt, dass die Entwicklung des Systems so durchgeführt wird,
 dass es auch in anderwärtigen Bereichen der Logistik, wie beispielsweise der Lagerverwaltung, eingesetzt werden kann.
@@ -173,7 +173,7 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
 
   Alexander Punz war sowohl für die Hardware, als auch für die Mechanik verantwortlich. Seine Aufgaben waren sowohl die Konzeption
   und Produktion des Rotorschutzes, der einen sicheren Flug der Drohne ermöglichte, als auch die Herstellung diverser Halterungen,
-  die für Sensorik, Transport und Flugtests verausgesetzt waren.
+  die für Sensorik, Transport und Flugtests vorausgesetzt waren.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Betreuer}
@@ -189,8 +189,8 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
   Er betreute nebenbei Lucas Ullrich mit Fachwissen aus dem Bereich der Elektronik.
 
   \subsection*{DI August Hörandl}
-  DI August Hörandl fungierte als Individualbetreuer von Christina Bornberg. Duch seine Fähigkeiten und
-  Erfahungen als Programmierer sowohl mit der Sprache C, als auch Java war das Entwickeln der Firmware,
+  DI August Hörandl fungierte als Individualbetreuer von Christina Bornberg. Durch seine Fähigkeiten und
+  Erfahrungen als Programmierer sowohl mit der Sprache C, als auch Java war das Entwickeln der Firmware,
   aber auch der Java-Applikation für die WLAN-Kommunikation, wesentlich einfacher. Außerdem war
   DI August Hörandl unser Ansprechpartner wenn es Unklarheiten bei \LaTeX gab.
 
@@ -209,14 +209,14 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
 
 \subsection*{GRZ IT Center GmbH}
 {GRZ IT Center\cite{grz}} ist eines der größten Rechenzentren Österreichs. Mit dem Fokus auf Bankenservicierung arbeitet das Unternehmen
-mit Partnern wie Raiffeisen zusammen. Auf eine Anfrage für ein Sponsoring der Diplomarbeit erhielten wir die überaschende
+mit Partnern wie Raiffeisen zusammen. Auf eine Anfrage für ein Sponsoring der Diplomarbeit erhielten wir die überraschende
 Antwort, dass GRZ das Projekt sehr interessant findet, und uns aus diesen Gründen als Hauptsponsor, mit einem beträchtlichen Betrag
 unterstützen würde.
 Es wurde ein Sponsoringvertrag, auf Basis einer Mustervorlage aufgesetzt, in welchen beidseitig Konditionen für die Partnerschaft
 verfasst, und von beiden Parteien unterzeichnet wurde.
 
 \subsection*{OFI}
-{Das Österreichische Forschungsinstitut\cite{ofi}} ist Experte von Forschung und Entwicklung im Bereich der Werkstoffanwerundung
+{Das Österreichische Forschungsinstitut\cite{ofi}} ist Experte von Forschung und Entwicklung im Bereich der Werkstoffanwendung
 und Bauwerkserneuerung. Neben finanzieller Unterstützung erhielt das Projektteam
 ein professionelles, projektbegleitendes Team-Coaching inklusive Teilnahmebestätigung.
 
@@ -241,7 +241,7 @@ Zusammenfassung umformuliert worden.
 
   \textbf{Konzeptstudie: Sensorik}
 
-  Um ohne manuelle Einfüsse fliegen zu können und sein Ziel zu finden braucht der Multicopter eine Reihe
+  Um ohne manuelle Einflüsse fliegen zu können und sein Ziel zu finden braucht der Multicopter eine Reihe
   von Sensoren. Diese dienen zur Positions-bzw. zur Objekterfassung. Das Konzept beinhaltet außerdem eine
   Maßnahme für die Kommunikation zwischen Multicopter und Sensoren.
   Der Multicopter ist mit den Sensoren verbunden und bekommt von ihnen die notwendigen Informationen.
@@ -300,7 +300,7 @@ Zusammenfassung umformuliert worden.
   \textbf{Mehrere Multicopter}
 
   Das System ist fähig, mehrere Multicopter gleichzeitig zu steuern, ohne Abstürze
-  zu verursachen oder Menschen zu gefärden.
+  zu verursachen oder Menschen zu gefährden.
 
   \textbf{Sicherheitsmaßnahmen}
 
@@ -320,7 +320,7 @@ zweier Projektmanagement-Methoden und der Wahl der Methode für diese Diplomarbe
   \subsection{Bewährte Methoden}
   \subsection*{Agile Methoden}
   Das Kennzeichen agiler Entwicklungsmethoden, wie beispielsweise Scrum oder Kanban, sind
-  ein iterativer Arbeitsprozess, Flexibilität, gute und häufige Kommunikation und vorallem
+  ein iterativer Arbeitsprozess, Flexibilität, gute und häufige Kommunikation und vor allem
   Selbstständigkeit. Es wird kurz geplant und fortlaufend angepasst. Da nur bedingt eine Reihenfolge
   von zu erledigenden Tasks besteht, finden sich diese Methoden oft in der Softwareentwicklung vor.
 
@@ -346,12 +346,12 @@ welche mithilfe eines Projektstrukturplans visualisiert wurden.
 \section{Teammanagement / Teambuilding}
 Da sich das Team aus sowohl aus Schülern verschiedener Klassen, aber auch Fachrichtungen
 zusammensetzte, war Teambuilding ein wichtiger Teil des Managements. Das Projekt bestand außerdem
-aus Komponenten, die sich technisch gesehen stark voneinader unterschieden, jedoch gut zusammenarbeiten mussten.
+aus Komponenten, die sich technisch gesehen stark voneinander unterschieden, jedoch gut zusammenarbeiten mussten.
 Daher war regelmäßige Kommunikation eine Voraussetzung.
 
   \subsection{KaTeCos}
   Eine Form von internen Meetings, die den Grundstein für die Teamdynamik setzten, waren unsere
-  sogenannten "Kaffe Team Coachings", kurz KaTeCos. Eine Projektmanegerin unseres Partnerunternehmens OFI
+  sogenannten "Kaffe Team Coachings", kurz KaTeCos. Eine Projektmanagerin unseres Partnerunternehmens OFI
   bot sich als Coach für das Team an. Alle drei Wochen erhielten wird bei Coachings wertvolle Techniken und
   Strategien, sowohl für das Teambuilding, als auch die Umsetzung des Projekts.
 
@@ -363,6 +363,6 @@ Daher war regelmäßige Kommunikation eine Voraussetzung.
     \item Jedes Teammitglied ist ehrlich und offen gegenüber den anderen Teammitgliedern
     \item Entscheidungen werden nicht nur vom Projektleiter, sondern vom gesamten Team getroffen.
     \item Jedes Teammitglied hat immer Zugriff auf projektinterne Dateien und Informationen.
-    \item Wichtige e-Mails sind zuerst vom gesamten Team abzusegnen, bevor sie verschickt werden.
+    \item Wichtige E-Mails sind zuerst vom gesamten Team abzusegnen, bevor sie verschickt werden.
     \item Probleme werden nicht als Hindernis, sondern als Chance gesehen.
   \end{itemize}
