--- a/diplom.bib
+++ b/diplom.bib
@@ -431,6 +431,18 @@
 	title = {SWOT-Analyse Matrix}
 }
 
+@online{caniuse,
+	lastchecked = {2016-05-06},
+	url = {http://caniuse.com/},
+	title = {caniuse.com}
+}
+
+@online{yoxview,
+	lastchecked = {2016-05-06},
+	url = {http://www.yoxigen.com/yoxview/},
+	title = {YoxView Image Viewer Plugin}
+}
+
 % Markus: Wie Farben wirken Buch
 @article{WieFarbenWirken,
 	author = {Heller, Eva},
