paar fehler :b zwischen commit

--- a/Sensoren_Aktoren.tex
+++ b/Sensoren_Aktoren.tex
@@ -122,7 +122,7 @@ while(frame == 0) {
     Die weiteren Werte eines Objekts werden der Reihe nach in einer \gls{Struktur} abgespeichert, hier ist nichts Besonderes mehr zu beachten.
 
   \subsection{Herausforderungen und Lösungen}
-  Insbesondere das Beispielprogramm\cite{PIXY_Porting_Examplecode} für eine Bildauswertung stellte einige Herausforderungen dar. Hier sind unterschiedliche Codeschnippsel in einem
+  Insbesondere das Beispielprogramm\cite{PIXY_Porting_Examplecode} für eine Bildauswertung stellte einige Herausforderungen dar. Hier sind unterschiedliche Codeschnipsel in einem
   großen Beispiel zusammengefasst. Die große Ähnlichkeit verschiedener Funktionen erschweren die Lesbarkeit des Codes erheblich. So steht eine Funktion für die Erkennung eines
   neuen Bildes, diese zählt aber nur Bilder pro Sekunde, eine andere ist dann für die gesamte Auswertung und sucht dafür erneut nach einem Bild.
 
@@ -218,7 +218,7 @@ void SendDebugInfo(unsigned int debug_info) {
 
   Um dieses nach der Verwendung wieder einfach aus dem Code entfernen zu können wurde das Übermitteln dieser Information an die Definition der $DEBUG$-Variable geknüpft.
 
-  In der Übertragung war es wichtig auf die Auswertung des Computers zu achten, desshalb mussten ASCII-Zeichen übertragen werden.
+  In der Übertragung war es wichtig auf die Auswertung des Computers zu achten, deshalb mussten ASCII-Zeichen übertragen werden.
 
   Die erste Messung bestätigte die Erwartungen:
   \begin{figure}[H]
@@ -285,7 +285,7 @@ void SendDebugInfo(unsigned int debug_info) {
 
   Für diese Diplomarbeit wurde die + Konfiguration für Hexacopter gewählt.
 
-  Wie auf folgender Grafik\cite{NAZA_Konfig} ersichtlich ist, gibt es nach links und nach rechts drehende Rotoren. Würden sich alle in die selbe Richtung drehen, würde sich der Multicopter um die eigene Hochachse drehen. Die rot gekennzeichneten Arme geben an, wo die Vorderseite des Multicopters ist. Bei der Y-Konfiguration sind die blau Makierten Propeller oben, die roten unten. 
+  Wie auf folgender Grafik\cite{NAZA_Konfig} ersichtlich ist, gibt es nach links und nach rechts drehende Rotoren. Würden sich alle in die selbe Richtung drehen, würde sich der Multicopter um die eigene Hochachse drehen. Die rot gekennzeichneten Arme geben an, wo die Vorderseite des Multicopters ist. Bei der Y-Konfiguration sind die blau makierten Propeller oben, die roten unten. 
 
     \begin{figure}[H]
       \begin{centering}
