Markus hat Finks Korrekturen Ãbernommen

--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -351,7 +351,7 @@ Daher war regelmäßige Kommunikation eine Voraussetzung.
 
   \subsection{KaTeCos}
   Eine Form von internen Meetings, die den Grundstein für die Teamdynamik setzten, waren unsere
-  sogenannten "Kaffe Team Coachings", kurz KaTeCos. Eine Projektmanagerin unseres Partnerunternehmens OFI
+  sogenannten "Kaffee Team Coachings", kurz KaTeCos. Eine Projektmanagerin unseres Partnerunternehmens OFI
   bot sich als Coach für das Team an. Alle drei Wochen erhielten wird bei Coachings wertvolle Techniken und
   Strategien, sowohl für das Teambuilding, als auch die Umsetzung des Projekts.
 
