--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -338,7 +338,7 @@ BGBl. II Nr. 123/97.
 \vspace{10mm}
 
 Aus Gründen der besseren Lesbarkeit wird auf die gleichzeitige Verwendung männlicher und weiblicher Sprachformen verzichtet.
-Sämtliche Personenbezeichnungen gelten gleichwohl für beiderlei Geschlecht.
+Sämtliche allgemeine Personenbezeichnungen gelten gleichwohl für beiderlei Geschlecht.
 
 \vspace{10mm}
 
